from enum import Enum

class Component(Enum):
  C1 = 1
  C2 = 2
  C3 = 3